2005-03-22 Satya Sudha K <ksathyasudha@novell.com>
	   Sudharsan V <vsudharsan@novell.com>
	* mb-parser.jay : 
			Removed some conflicts in the grammar

2005-03-21 Manjula GHM <mmanjula@novell.com>
	* statement.cs: Implementation of 'End' Statement which terminates execution immediately

2005-03-18 Satya Sudha K <ksathyasudha@novell.com>
	* mb-parser.jay :
	* mb-tokenizer.cs :
	* expression.cs :
		Supported 'Like' operator

2005-03-18 Manjula GHM <mmanjula@novell.com>
           Sudharsan V <vsudharsan@novell.com>
          * mb-parser.jay:
              Some more fixes related to displaying correct line number

2005-03-17 Manjula GHM <mmanjula@novell.com>
	*ecore.cs : rounding the double values before converting to Integer types

2005-03-17 Manjula GHM <mmanjula@novell.com>
	*ecore.cs : Support Double in case statement and do necessary conversion to Int Literal

2005-03-16 Manjula GHM <mmanjula@novell.com>
	* mb-parser.jay:
		Support 'expression TO expression' case clause for select statement

2005-03-15 Satya Sudha K <ksathyasudha@novell.com>
	* mb-parser.jay :
	* expression.cs :
		Supported '\' (int division) operator

2005-03-11 Manjula GHM <mmanjula@novell.com>
           Sudharsan V <vsudharsan@novell.com>
          * mb-parser.jay:
              Fixes related to displaying correct line number,error message and handle End of blocks

2005-03-11 Satya Sudha K <ksathyasudha@novell.com>
	* expression.cs :
			 Support for 'Nothing' with all operators.
			 A few fixes to the 'DoNumericPromotions' method
	* ecore.cs      :
			 Fixed Boolean constant conversions
			 Supported conversion of 'nothing' to value types

2005-03-10 Manjula GHM <mmanjula@novell.com>
	*expression.cs :
		Support 'Is' for all reference types

2005-03-10 Satya Sudha K <sathyasudha@novell.com>
	* mb-parser.jay :
	* expression.cs :
			Support for 'AndAlso' and 'OrElse' operator

2005-03-09 Manjula GHM <mmanjula@novell.com>
	*mb-parser.jay :
	*expression.cs :
		Support 'Is' Expression
